--- a/configs/voc_attn_reg.yaml
+++ b/configs/voc_attn_reg.yaml
@@ -8,11 +8,11 @@ dataset:
   ignore_index: 255
 
 work_dir:
-  dir: work_dir_voc
-  ckpt_dir: /content/drive/MyDrive/WEclip-ckpt
-  pred_dir: /content/predictions
-  segs_dir: /content/segs
-  tb_logger_dir: /content/tb_logger
+  dir: /content/drive/MyDrive/WEclip-ckpt
+  ckpt_dir: checkpoints
+  pred_dir: predictions
+  segs_dir: segs
+  tb_logger_dir: tb_logger
 
 train:
   split: train_aug
