--- a/configs/voc_attn_reg.yaml
+++ b/configs/voc_attn_reg.yaml
@@ -43,4 +43,4 @@ clip_init:
   in_channels: [768, 768,768,768]
 
 unicl_init:
-  unicl_pretrain_path: /content/WeCLIP/swin_tiny_patch4_window7_224.pth
+  unicl_pretrain_path: /content/WeCLIP/yfcc14m.pth
